# meta-agent

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/example/: benchmark_codex_sdk_smoke.yaml  benchmark_research_single_file_smoke.yaml
benchmarks/plan_rewardbench/: __init__.py  adapter.py  benchmark.yaml  build_splits.py  proposer_context.md  rubric_prompts.py  rubrics.md
benchmarks/plan_rewardbench_pointwise/: benchmark.yaml  proposer_context.md
benchmarks/tau3/: adapter.py  benchmark.yaml  cache_baseline_trajectories.py  proposer_context.md  sdk_adapter.py  stage2.py
benchmarks/tau3_trajectory_judge/: __init__.py  adapter.py  benchmark.yaml  best_of_n.py  build_pool.py  formatting.py  proposer_context.md  smoke.py
benchmarks/tau3_trajectory_pointwise/: benchmark.yaml  proposer_context.md
meta_agent/: __init__.py  __main__.py
meta_agent/cloud/: MODAL.md  __init__.py  modal_runner.py  modal_smoke.py
meta_agent/commands/: evaluate.py  inspect.py  propose.py  run_task.py
meta_agent/core/: __init__.py  adapters.py  benchmark.py  experience.py  paths.py  run_context.py  targets.py
meta_agent/harness_contracts/: __init__.py  claude_agent_sdk.py  program.py  research.py
meta_agent/loop/: __init__.py  __main__.py  cli.py  codex_wrapper.py  epoch.py  final_eval.py  inprocess_proposer.py  proposer.py  proposer_session_log.py  reports.py  skill_evolver.py  smoke_gate.py  state.py  validate.py
meta_agent/proposer_instructions/: claude_agent_sdk.md  codex.md  program_harness.md  shared.md  (+1 more)
tests/: mock_llm_server.py  test_provider_routing.py
(+37 files in other folders)
